# pdxdoc

./: Cargo.toml
src/: config.rs  dossier.rs  entry.rs  error.rs  generator.rs  helpers.rs  main.rs  mapper.rs  page.rs  theme.rs
src/games/: mod.rs  victoria3.rs
src/util/: game_asset.rs  icons.rs  mod.rs  syntax_highlight.rs
themes/default/: category_list.hbs  layout.hbs  list_index.hbs  mask.hbs  scope.hbs  theme.json
themes/default/assets/: style.scss  syntax-highlight.scss
themes/default/partials/: layout.hbs  pagination.hbs
